# sales_forecast_dashboard

./: README.md  diy.ipynb  predict_sales.py  pyproject.toml  view.py
datasets/: h2slt44j.xls  schema.py  その他.pth  インテリア.pth  オフィス・カルチャー.pth  カー用品・アウトドア.pth  ペット・ペット用品.pth  商品販売額.pth  園芸・エクステリア.pth  家庭用品・日用品.pth  電気.pth  ＤＩＹ用具・素材.pth
